# deezerboy

./: .env.example  Justfile  README.md  deezeer_extract.ipynb  deezerus.py  df_tracks_sorted.csv  environment.yaml  export.bat  export.sh  export_quick.py  pyproject.toml  test.ipynb  visualisationus.py
.streamlit/: config.toml
src/deezerboy/: __init__.py  api.py  cli.py  dashboard.py  export.py
