[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deezerboy"
version = "1.0.0"
description = "Explore et analyse votre bibliothèque musicale Deezer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Nathan", email = "user@example.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.26.0",
]

[project.scripts]
deezerboy = "deezerboy.cli:main"
